--- a/src/styles/component/navbar.css
+++ b/src/styles/component/navbar.css
@@ -40,6 +40,10 @@ nav {
   align-items: center;
 }
 
+header img {
+  width: 3vh;
+  height: auto;
+}
 @media only screen and (max-width: 1024px) {
   header .nav-btn {
     visibility: visible;
