--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,4 +1,4 @@
-header {
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -8,21 +8,25 @@ header {
   border-radius: 20px;
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.8);
   color: var(--textColor);
-
   margin-bottom: 20px;
 }
 
-nav a {
+.nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav a {
   margin: 0 1rem;
   color: var(--textColor);
   text-decoration: none;
 }
 
-nav a:hover {
+.nav a:hover {
   color: var(--secondaryColor);
 }
 
-header .nav-btn {
+.navBtn {
   padding: 5px;
   cursor: pointer;
   background: transparent;
@@ -34,23 +38,18 @@ header .nav-btn {
   font-size: 1.8rem;
 }
 
-header div,
-nav {
-  display: flex;
-  align-items: center;
-}
-
-header img {
+.header img {
   width: 3vh;
   height: auto;
 }
+
 @media only screen and (max-width: 1024px) {
-  header .nav-btn {
+  .navBtn {
     visibility: visible;
     opacity: 1;
   }
 
-  header nav {
+  .nav {
     position: fixed;
     top: -100vh;
     left: 0;
@@ -68,17 +67,17 @@ header img {
     transition: 1s;
   }
 
-  header .responsive_nav {
+  .responsiveNav {
     transform: translateY(100vh);
   }
 
-  nav .nav-close-btn {
+  .navCloseBtn {
     position: absolute;
     top: 2rem;
     right: 2rem;
   }
 
-  nav a {
+  .nav a {
     font-size: 1.5rem;
   }
 }
