--- a/src/pages/Aboutme/About.module.css
+++ b/src/pages/Aboutme/About.module.css
@@ -1,12 +1,12 @@
-.list-container {
+.listContainer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   font-size: 1.25rem;
 }
 
-.left-list,
-.right-list {
+.leftList,
+.rightList {
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -14,8 +14,8 @@
 }
 
 @media (max-width: 768px) {
-  .left-list,
-  .right-list {
+  .leftList,
+  .rightList {
     text-align: left;
     word-wrap: normal;
     width: 100%;
