--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,6 +47,24 @@ hr {
 li {
   margin: 5px 0;
 }
+
+footer {
+  display: flex;
+  align-items: center;
+  height: 80px;
+  padding: 0 2rem;
+  color: var(--textColor);
+  border: 1px solid #535353;
+  border-radius: 20px;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.8);
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+footer p {
+  width: 100%;
+}
+
 @media (max-width: 768px) {
   section {
     padding: 50px;
