--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -6,7 +6,7 @@
   -webkit-text-stroke: 2px white;
   color: transparent;
   font-family: "Archivo Black", sans-serif;
-  text-wrap: nowrap;
+  text-wrap: wrap;
   font-size: 90%;
   transition: linear 200ms;
 }
