--- a/src/pages/Skills/Skills.module.css
+++ b/src/pages/Skills/Skills.module.css
@@ -22,6 +22,7 @@
   margin: 10px;
 }
 .iconSingleContainer {
+  backdrop-filter: blur(2px);
   margin: auto;
   margin-top: 10px;
   display: flex;
@@ -35,7 +36,7 @@
   text-wrap: wrap;
   font-size: 20px;
 }
-
-h1 {
+.skills h1 {
   font-size: 3rem;
+  margin-bottom: 20px;
 }
