Image and animations

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -37,7 +37,7 @@
 .navBtn {
   padding: 5px;
   cursor: pointer;
-
+  background-color: transparent;
   border: 1px solid #535353;
   border-radius: 5px;
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.8);
